force-app/main/default/objects/Account_Classifications__c/Account_Classifications__c.object-meta.xml
<CustomObject>
    <description>To capture the Account Travel Policy and Preferred Carrier Information</description>
    <label>Account Classifications</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Account Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>