force-app/main/default/objects/Account_Classifications__c/fields/AMEX_Spend_Date__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Spend_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Spend Date</label>
    <type>Date</type>
</CustomField>