force-app/main/default/objects/Account_Classifications__c/fields/Change_on_Procurement_Spend__c.field-meta.xml
<CustomField>
    <fullName>Change_on_Procurement_Spend__c</fullName>
    <formula>((TY_Procurement_Spend_aggregated__c -  LY_Procurement_Spend_aggregated__c)/LY_Procurement_Spend_aggregated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change-on-Procurement-Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>