force-app/main/default/objects/Account_Classifications__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred Carrier</fullName>
            </value>
            <value>
                <fullName>Travel Policy</fullName>
            </value>
            <value>
                <fullName>OBT</fullName>
            </value>
            <value>
                <fullName>Multi POS</fullName>
            </value>
            <value>
                <fullName>Strategic Priority</fullName>
            </value>
            <value>
                <fullName>Loyalty Partner Update</fullName>
            </value>
            <value>
                <fullName>Agency Tier</fullName>
            </value>
            <value>
                <fullName>Account Onboarding</fullName>
            </value>
            <value>
                <fullName>Procurement Tier</fullName>
            </value>
            <value>
                <fullName>QBR Segmentation</fullName>
            </value>
            <value>
                <fullName>Joint Customer</fullName>
            </value>
            <value>
                <fullName>SME TIER</fullName>
                <label>SME Tier</label>
            </value>
            <value>
                <fullName>Top QBR Customer&gt;$200K</fullName>
            </value>
            <value>
                <fullName>QBR QF Share</fullName>
            </value>
            <value>
                <fullName>Company Policy</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Revenue Integrity</fullName>
            </value>
            <value>
                <fullName>Multiple Breaches</fullName>
            </value>
            <value>
                <fullName>Commercial Deal or Buying Group</fullName>
            </value>
            <value>
                <fullName>IATA or TIDS</fullName>
            </value>
            <value>
                <fullName>Compliance to policy</fullName>
            </value>
            <value>
                <fullName>Revenue Threshold</fullName>
            </value>
            <value>
                <fullName>Previous EOI rejected</fullName>
            </value>
            <value>
                <fullName>Look to book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>