force-app/main/default/objects/Account_Classifications__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Loyalty Commercial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>