force-app/main/default/objects/Account_Classifications__c/fields/Current_Performance__c.field-meta.xml
<CustomField>
    <fullName>Current_Performance__c</fullName>
    <description>Loyalty Commercial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Performance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>