force-app/main/default/objects/Account_Classifications__c/fields/Current_QF_INTL_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Current_QF_INTL_Market_Share__c</fullName>
    <label>Current QF INTL Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>