force-app/main/default/objects/Account_Classifications__c/fields/Current_Total_INTL_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_INTL_Spend__c</fullName>
    <label>Current Total INTL Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>