force-app/main/default/objects/Account_Classifications__c/fields/OBT_Channel__c.field-meta.xml
<CustomField>
    <fullName>OBT_Channel__c</fullName>
    <description>Directly contracted with OBT providers or indirectly dealt via TMC</description>
    <inlineHelpText>Directly contracted with OBT providers or indirectly dealt via TMC</inlineHelpText>
    <label>OBT Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>