force-app/main/default/objects/Account_Classifications__c/fields/Participating_Countries__c.field-meta.xml
<CustomField>
    <fullName>Participating_Countries__c</fullName>
    <description>For Mutli POS Deals, what Countries are participating in the Deal</description>
    <inlineHelpText>For Multi POS Deals</inlineHelpText>
    <label>Participating Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>