force-app/main/default/objects/Account_Classifications__c/fields/Partner_Update__c.field-meta.xml
<CustomField>
    <fullName>Partner_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Update</label>
    <length>150</length>
    <type>Text</type>
</CustomField>