force-app/main/default/objects/Account_Classifications__c/fields/Partnership_Overview__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Overview__c</fullName>
    <description>Loyalty Commercial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partnership Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>