force-app/main/default/objects/Account_Classifications__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>To capture last reviewed date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reviewed Date</label>
    <type>Date</type>
</CustomField>