force-app/main/default/objects/Account_Classifications__c/fields/Sub_Classifcation__c.field-meta.xml
<CustomField>
    <fullName>Sub_Classifcation__c</fullName>
    <label>Sub-Classifcation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>