force-app/main/default/objects/Account_Classifications__c/fields/Sub_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sub_Classification__c</fullName>
    <label>Sub Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At travellers discretion</fullName>
            </value>
            <value>
                <fullName>BFOD (best fare of the day)</fullName>
            </value>
            <value>
                <fullName>Dealt Government</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Lowest Logical Fare</fullName>
            </value>
            <value>
                <fullName>Restricted Outbound/ Flex Return</fullName>
            </value>
            <value>
                <fullName>QF</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>JQ</fullName>
            </value>
            <value>
                <fullName>QF/VA</fullName>
            </value>
            <value>
                <fullName>VA/JQ</fullName>
            </value>
            <value>
                <fullName>QF/JQ</fullName>
            </value>
            <value>
                <fullName>QF/VA/JQ</fullName>
            </value>
            <value>
                <fullName>Open Skies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Serko</fullName>
            </value>
            <value>
                <fullName>Concur</fullName>
            </value>
            <value>
                <fullName>AeTM</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>GetThere</fullName>
            </value>
            <value>
                <fullName>Locomote</fullName>
            </value>
            <value>
                <fullName>KDS</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>Cytric</fullName>
            </value>
            <value>
                <fullName>Fraedom</fullName>
            </value>
            <value>
                <fullName>Sabre Online</fullName>
            </value>
            <value>
                <fullName>Do not use an OBT</fullName>
            </value>
            <value>
                <fullName>Multinational</fullName>
            </value>
            <value>
                <fullName>Bilateral</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>