force-app/main/default/objects/Account_Classifications__c/fields/Total_AMEX_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_AMEX_Spend__c</fullName>
    <label>Total AMEX Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>