force-app/main/default/objects/Account_Classifications__c/fields/Total_QBR_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_QBR_Spend__c</fullName>
    <label>Total QBR Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>