force-app/main/default/objects/Account_Classifications__c/fields/TY_Procurement_Spend_aggregated__c.field-meta.xml
<CustomField>
    <fullName>TY_Procurement_Spend_aggregated__c</fullName>
    <label>TY-Procurement-$Spend aggregated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>