force-app/main/default/objects/Account_Classifications__c/recordTypes/Account_Classifications.recordType-meta.xml
<RecordType>
    <fullName>Account_Classifications</fullName>
    <active>true</active>
    <description>Preferred Carrier, Travel Policy, OBT, Multi POS, Strategic Priority, Account Tier</description>
    <label>Account Classifications</label>
</RecordType>