force-app/main/default/objects/Account_Classifications__c/recordTypes/Account_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Account_Onboarding</fullName>
    <active>true</active>
    <description>Current spend details for creating new Opportunity</description>
    <label>Account Onboarding</label>
</RecordType>