force-app/main/default/objects/Account_Classifications__c/recordTypes/Loyalty_Commercial_Partner_Update.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Commercial_Partner_Update</fullName>
    <active>true</active>
    <description>Loyalty Commercial - Partner Update</description>
    <label>Loyalty Commercial - Partner Update</label>
</RecordType>