force-app/main/default/objects/Account_Classifications__c/recordTypes/Non_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Non_Compliance</fullName>
    <active>true</active>
    <description>Qantas SATC (Standard Agency Terms &amp; Conditions) related Compliance matters</description>
    <label>Non Compliance</label>
</RecordType>